name:                event
version:             0.1
synopsis:            Monoidal, monadic and first-class events
-- description:
license:             BSD3
license-file:        LICENSE
author:              Dimitri Sabadie <dimitri.sabadie@gmail.com>
maintainer:          Dimitri Sabadie <dimitri.sabadie@gmail.com>
copyright:           Dimitri Sabadie
category:            Concurrency
extra-source-files:  CHANGELOG.md

build-type:          Simple
cabal-version:       >= 1.10

library
  ghc-options:         -W -Wall

  exposed-modules:     Control.Concurrent.Future

  build-depends:       base         >= 4.8  && < 4.9
                     , transformers >= 0.4  && < 0.5
                     , containers   >= 0.5  && < 0.6
                     , semigroups   >= 0.16 && < 0.17

  hs-source-dirs:      src

  default-language:    Haskell2010
